examples/test/testpolicy6696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6696
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key16: value45
      key9: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value13
          key10: value47
          key7: value29
      podSelector:
        matchLabels:
          key11: value12
          key2: value41
